--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,8 @@
             android:id="@+id/btn_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_marginEnd="@dimen/padding_6"
+            android:layout_alignParentEnd="true"
             android:text="@string/go" />
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
